Lot's of changes

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,9 +2,9 @@
   <p>
     <a
       class="common-button--text"
-      href="https://rubyonrails.org/world/2024"
+      href="https://yourwebsite.com/launch-offer"
       target="_blank">
-      Rails World is sold out. See you in Toronto Sept 26 & 27.
+      🎉 Launch Special: 20% Off! Don't Miss Out!
     </a>
   </p>
 </div>
