--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,11 +1,12 @@
-$color-black: #261B23;
-$color-grey-1: #F0E7E9;
-$color-grey-2: #E6DDDF;
-$color-grey-3: #DCD3D5;
-$color-grey-4: #968D8F;
-$color-grey-5: #5A5153;
-$color-red: #D30001;
+$color-black: #1E2A26;
+$color-grey-1: #E8F0ED;
+$color-grey-2: #DDE6E3;
+$color-grey-3: #D1DBD8;
+$color-grey-4: #8D9794;
+$color-grey-5: #515957;
+$color-green: #305C53;
 $color-white: #FFF;
+
 
 $filter-black: invert(5%) sepia(18%) saturate(1397%) hue-rotate(314deg) brightness(95%) contrast(83%);
 $filter-grey: invert(97%) sepia(2%) saturate(669%) hue-rotate(314deg) brightness(96%) contrast(97%);
