--- a/_sass/world/2023/base/_colours.scss
+++ b/_sass/world/2023/base/_colours.scss
@@ -1,14 +1,14 @@
 :root {
-  --red: #BF281C;
-  --purple-pale: #F3EDFF;
-  --purple-medium: #A386FF;
-  --purple-dark: #3B1D62;
-  --purple-dark-translucent: #3B1D6288;
-  --orange:  #D96242;
-  --orange-red: #F9553A;
+  --red: #bf281c;
+  --purple-pale: #f3edff;
+  --purple-medium: #a386ff;
+  --purple-dark: #3b1d62;
+  --purple-dark-translucent: #3b1d6288;
+  --orange: #d96242;
+  --orange-red: #f9553a;
   --orange-brown: rgba(249, 85, 58, 0.58);
-  --pink-pale: #F8DBDB;;
-  --white: #FFFFFF;
+  --pink-pale: #f8dbdb;
+  --white: #ffffff;
 
   --text-color: var(--white);
 }
