--- a/_sass/world/2023/modules/_footer.scss
+++ b/_sass/world/2023/modules/_footer.scss
@@ -18,7 +18,7 @@ footer {
 
   p {
     font-size: var(--type-x-small);
-    padding-bottom: var(--space-small)
+    padding-bottom: var(--space-small);
   }
 
   bordered-container {
