--- a/_sass/world/2023/modules/_header.scss
+++ b/_sass/world/2023/modules/_header.scss
@@ -18,7 +18,8 @@
     margin: auto;
   }
 
-  &__logo:hover, &__link:hover {
+  &__logo:hover,
+  &__link:hover {
     transform: none !important;
   }
 
