--- a/_sass/world/2023/modules/_legal.scss
+++ b/_sass/world/2023/modules/_legal.scss
@@ -22,7 +22,7 @@
 
     /* Extra small devices (phones, 600px and down) */
     @media only screen and (max-width: 600px) {
-      margin-left: var(--space-medium)
+      margin-left: var(--space-medium);
     }
   }
 
@@ -36,7 +36,7 @@
 
     /* Extra small devices (phones, 600px and down) */
     @media only screen and (max-width: 600px) {
-      margin-left: var(--space-medium)
+      margin-left: var(--space-medium);
     }
 
     li::marker {
@@ -49,7 +49,7 @@
 
     /* Extra small devices (phones, 600px and down) */
     @media only screen and (max-width: 600px) {
-      margin-left: var(--space-large)
+      margin-left: var(--space-large);
     }
   }
 
@@ -59,7 +59,7 @@
 
     /* Extra small devices (phones, 600px and down) */
     @media only screen and (max-width: 600px) {
-      margin-left: var(--space-medium)
+      margin-left: var(--space-medium);
     }
 
     li::marker {
