--- a/_sass/world/2024/base/_typography.scss
+++ b/_sass/world/2024/base/_typography.scss
@@ -9,7 +9,7 @@
 }
 
 h1 {
-  font-family: "acumin-variable", sans-serif;
+  font-family: 'acumin-variable', sans-serif;
   color: var(--text-color);
   font-size: var(--type-xxx-large);
   font-variation-settings: var(--font-weight-800);
@@ -22,7 +22,7 @@ h1 {
 }
 
 h2 {
-  font-family: "acumin-variable", sans-serif;
+  font-family: 'acumin-variable', sans-serif;
   color: var(--text-color);
   font-size: var(--type-xx-large);
   font-variation-settings: var(--font-weight-800);
@@ -35,7 +35,7 @@ h2 {
 }
 
 h3 {
-  font-family: "acumin-variable", sans-serif;
+  font-family: 'acumin-variable', sans-serif;
   color: var(--text-color);
   font-size: var(--type-x-large);
   font-variation-settings: var(--font-weight-800);
@@ -48,7 +48,7 @@ h3 {
 }
 
 h4 {
-  font-family: "acumin-variable", sans-serif;
+  font-family: 'acumin-variable', sans-serif;
   color: var(--text-color);
   font-size: var(--type-large);
 
@@ -59,7 +59,7 @@ h4 {
 }
 
 h5 {
-  font-family: "acumin-variable", sans-serif;
+  font-family: 'acumin-variable', sans-serif;
   color: var(--text-color);
   font-size: var(--type-medium);
 
@@ -70,7 +70,7 @@ h5 {
 }
 
 h6 {
-  font-family: "acumin-variable", sans-serif;
+  font-family: 'acumin-variable', sans-serif;
   color: var(--text-color);
   font-size: var(--type-small);
 
