--- a/_sass/base/_body.scss
+++ b/_sass/base/_body.scss
@@ -1,17 +1,16 @@
 body {
-
-  @include calibre();
+  @include inter();
   background: $color-grey-1;
   color: $color-black;
   font-size: 18px;
-  font-smoothing: antialiased;
+  font-smooth: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   line-height: 24px;
   -webkit-tap-highlight-color: rgba($color-black, 0);
 
   a {
-    color: $color-red;
+    color: $color-green;
     text-decoration: none;
     transition: color $transition;
   }
@@ -20,7 +19,7 @@ body {
   input,
   select,
   textarea {
-    @include calibre();
+    @include inter();
   }
 
   img {
@@ -31,13 +30,8 @@ body {
     width: 100%;
   }
 
-
-
-  @media(min-width: 1024px) {
+  @media (min-width: 1024px) {
     font-size: 21px;
     line-height: 26px;
   }
-
-
-
 }
