--- a/_sass/base/_fonts.scss
+++ b/_sass/base/_fonts.scss
@@ -4,8 +4,8 @@
   font-weight: 400;
   src: url('../fonts/IBMPlexMono-Text.eot');
   src: url('../fonts/IBMPlexMono-Text.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/IBMPlexMono-Text.woff2') format('woff2'),
-       url('../fonts/IBMPlexMono-Text.woff') format('woff');
+    url('../fonts/IBMPlexMono-Text.woff2') format('woff2'),
+    url('../fonts/IBMPlexMono-Text.woff') format('woff');
   font-display: swap;
 }
 
@@ -14,9 +14,10 @@
   font-style: italic;
   font-weight: 400;
   src: url('../fonts/IBMPlexMono-TextItalic.eot');
-  src: url('../fonts/IBMPlexMono-TextItalic.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/IBMPlexMono-TextItalic.woff2') format('woff2'),
-       url('../fonts/IBMPlexMono-TextItalic.woff') format('woff');
+  src: url('../fonts/IBMPlexMono-TextItalic.eot?#iefix')
+      format('embedded-opentype'),
+    url('../fonts/IBMPlexMono-TextItalic.woff2') format('woff2'),
+    url('../fonts/IBMPlexMono-TextItalic.woff') format('woff');
   font-display: swap;
 }
 
@@ -26,8 +27,8 @@
   font-weight: 500;
   src: url('../fonts/IBMPlexMono-Medium.eot');
   src: url('../fonts/IBMPlexMono-Medium.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/IBMPlexMono-Medium.woff2') format('woff2'),
-       url('../fonts/IBMPlexMono-Medium.woff') format('woff');
+    url('../fonts/IBMPlexMono-Medium.woff2') format('woff2'),
+    url('../fonts/IBMPlexMono-Medium.woff') format('woff');
   font-display: swap;
 }
 
@@ -36,84 +37,151 @@
   font-style: italic;
   font-weight: 500;
   src: url('../fonts/IBMPlexMono-MediumItalic.eot');
-  src: url('../fonts/IBMPlexMono-MediumItalic.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/IBMPlexMono-MediumItalic.woff2') format('woff2'),
-       url('../fonts/IBMPlexMono-MediumItalic.woff') format('woff');
+  src: url('../fonts/IBMPlexMono-MediumItalic.eot?#iefix')
+      format('embedded-opentype'),
+    url('../fonts/IBMPlexMono-MediumItalic.woff2') format('woff2'),
+    url('../fonts/IBMPlexMono-MediumItalic.woff') format('woff');
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Calibre';
+  font-family: InterVariable;
+  font-style: normal;
+  font-weight: 100 900;
+  font-display: swap;
+  src: url('../fonts/InterVariable.woff2?v=4.0') format('woff2');
+}
+@font-face {
+  font-family: InterVariable;
+  font-style: italic;
+  font-weight: 100 900;
+  font-display: swap;
+  src: url('../fonts/InterVariable-Italic.woff2?v=4.0') format('woff2');
+}
+
+@font-face {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 100;
+  font-display: swap;
+  src: url('../fonts/Inter-Thin.woff2?v=4.0') format('woff2');
+}
+@font-face {
+  font-family: Inter;
+  font-style: italic;
+  font-weight: 100;
+  font-display: swap;
+  src: url('../fonts/Inter-ThinItalic.woff2?v=4.0') format('woff2');
+}
+@font-face {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 200;
+  font-display: swap;
+  src: url('../fonts/Inter-ExtraLight.woff2?v=4.0') format('woff2');
+}
+@font-face {
+  font-family: Inter;
+  font-style: italic;
+  font-weight: 200;
+  font-display: swap;
+  src: url('../fonts/Inter-ExtraLightItalic.woff2?v=4.0') format('woff2');
+}
+@font-face {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url('../fonts/Inter-Light.woff2?v=4.0') format('woff2');
+}
+@font-face {
+  font-family: Inter;
+  font-style: italic;
+  font-weight: 300;
+  font-display: swap;
+  src: url('../fonts/Inter-LightItalic.woff2?v=4.0') format('woff2');
+}
+@font-face {
+  font-family: Inter;
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/calibre-regular.woff2') format('woff2');
   font-display: swap;
+  src: url('../fonts/Inter-Regular.woff2?v=4.0') format('woff2');
 }
-
 @font-face {
-  font-family: 'Calibre';
+  font-family: Inter;
   font-style: italic;
   font-weight: 400;
-  src: url('../fonts/calibre-regular-italic.woff2') format('woff2');
   font-display: swap;
+  src: url('../fonts/Inter-Italic.woff2?v=4.0') format('woff2');
 }
-
 @font-face {
-  font-family: 'Calibre';
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url('../fonts/Inter-Medium.woff2?v=4.0') format('woff2');
+}
+@font-face {
+  font-family: Inter;
+  font-style: italic;
+  font-weight: 500;
+  font-display: swap;
+  src: url('../fonts/Inter-MediumItalic.woff2?v=4.0') format('woff2');
+}
+@font-face {
+  font-family: Inter;
   font-style: normal;
   font-weight: 600;
-  src: url('../fonts/calibre-semibold.woff2') format('woff2');
   font-display: swap;
+  src: url('../fonts/Inter-SemiBold.woff2?v=4.0') format('woff2');
 }
-
 @font-face {
-  font-family: 'Calibre';
+  font-family: Inter;
   font-style: italic;
   font-weight: 600;
-  src: url('../fonts/calibre-semibold-italic.woff2') format('woff2');
   font-display: swap;
+  src: url('../fonts/Inter-SemiBoldItalic.woff2?v=4.0') format('woff2');
 }
-
 @font-face {
-  font-family: 'Calibre';
+  font-family: Inter;
   font-style: normal;
   font-weight: 700;
-  src: url('../fonts/calibre-bold.woff2') format('woff2');
   font-display: swap;
+  src: url('../fonts/Inter-Bold.woff2?v=4.0') format('woff2');
 }
-
-// https://rsms.me/inter/
-// Fonts used by the Rails Guides, served by rubyonrails.org. Declared here for documentation / reference.
-// @font-face {
-//   font-family: InterVariable;
-//   font-style: normal;
-//   font-weight: 100 900;
-//   font-display: swap;
-//   src: url('../fonts/InterVariable.woff2?v=4.0') format('woff2');
-// }
-// @font-face {
-//   font-family: InterVariable;
-//   font-style: italic;
-//   font-weight: 100 900;
-//   font-display: swap;
-//   src: url('../fonts/InterVariable-Italic.woff2?v=4.0') format('woff2');
-// }
-//
-// @font-face { font-family:Inter; font-style:normal; font-weight:100; font-display:swap; src:url("../fonts/Inter-Thin.woff2?v=4.0") format("woff2"); }
-// @font-face { font-family:Inter; font-style:italic; font-weight:100; font-display:swap; src:url("../fonts/Inter-ThinItalic.woff2?v=4.0") format("woff2"); }
-// @font-face { font-family:Inter; font-style:normal; font-weight:200; font-display:swap; src:url("../fonts/Inter-ExtraLight.woff2?v=4.0") format("woff2"); }
-// @font-face { font-family:Inter; font-style:italic; font-weight:200; font-display:swap; src:url("../fonts/Inter-ExtraLightItalic.woff2?v=4.0") format("woff2"); }
-// @font-face { font-family:Inter; font-style:normal; font-weight:300; font-display:swap; src:url("../fonts/Inter-Light.woff2?v=4.0") format("woff2"); }
-// @font-face { font-family:Inter; font-style:italic; font-weight:300; font-display:swap; src:url("../fonts/Inter-LightItalic.woff2?v=4.0") format("woff2"); }
-// @font-face { font-family:Inter; font-style:normal; font-weight:400; font-display:swap; src:url("../fonts/Inter-Regular.woff2?v=4.0") format("woff2"); }
-// @font-face { font-family:Inter; font-style:italic; font-weight:400; font-display:swap; src:url("../fonts/Inter-Italic.woff2?v=4.0") format("woff2"); }
-// @font-face { font-family:Inter; font-style:normal; font-weight:500; font-display:swap; src:url("../fonts/Inter-Medium.woff2?v=4.0") format("woff2"); }
-// @font-face { font-family:Inter; font-style:italic; font-weight:500; font-display:swap; src:url("../fonts/Inter-MediumItalic.woff2?v=4.0") format("woff2"); }
-// @font-face { font-family:Inter; font-style:normal; font-weight:600; font-display:swap; src:url("../fonts/Inter-SemiBold.woff2?v=4.0") format("woff2"); }
-// @font-face { font-family:Inter; font-style:italic; font-weight:600; font-display:swap; src:url("../fonts/Inter-SemiBoldItalic.woff2?v=4.0") format("woff2"); }
-// @font-face { font-family:Inter; font-style:normal; font-weight:700; font-display:swap; src:url("../fonts/Inter-Bold.woff2?v=4.0") format("woff2"); }
-// @font-face { font-family:Inter; font-style:italic; font-weight:700; font-display:swap; src:url("../fonts/Inter-BoldItalic.woff2?v=4.0") format("woff2"); }
-// @font-face { font-family:Inter; font-style:normal; font-weight:800; font-display:swap; src:url("../fonts/Inter-ExtraBold.woff2?v=4.0") format("woff2"); }
-// @font-face { font-family:Inter; font-style:italic; font-weight:800; font-display:swap; src:url("../fonts/Inter-ExtraBoldItalic.woff2?v=4.0") format("woff2"); }
-// @font-face { font-family:Inter; font-style:normal; font-weight:900; font-display:swap; src:url("../fonts/Inter-Black.woff2?v=4.0") format("woff2"); }
-// @font-face { font-family:Inter; font-style:italic; font-weight:900; font-display:swap; src:url("../fonts/Inter-BlackItalic.woff2?v=4.0") format("woff2"); }
+@font-face {
+  font-family: Inter;
+  font-style: italic;
+  font-weight: 700;
+  font-display: swap;
+  src: url('../fonts/Inter-BoldItalic.woff2?v=4.0') format('woff2');
+}
+@font-face {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 800;
+  font-display: swap;
+  src: url('../fonts/Inter-ExtraBold.woff2?v=4.0') format('woff2');
+}
+@font-face {
+  font-family: Inter;
+  font-style: italic;
+  font-weight: 800;
+  font-display: swap;
+  src: url('../fonts/Inter-ExtraBoldItalic.woff2?v=4.0') format('woff2');
+}
+@font-face {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 900;
+  font-display: swap;
+  src: url('../fonts/Inter-Black.woff2?v=4.0') format('woff2');
+}
+@font-face {
+  font-family: Inter;
+  font-style: italic;
+  font-weight: 900;
+  font-display: swap;
+  src: url('../fonts/Inter-BlackItalic.woff2?v=4.0') format('woff2');
+}
