--- a/_sass/base/_mixins.scss
+++ b/_sass/base/_mixins.scss
@@ -1,11 +1,11 @@
-@mixin calibre() {
-  font-family: 'Calibre', Sans-Serif;
+@mixin plex() {
+  font-family: 'IBM Plex Mono', Monospace;
   font-style: normal;
   font-weight: 400;
 }
 
-@mixin plex() {
-  font-family: 'IBM Plex Mono', Monospace;
+@mixin inter() {
+  font-family: 'Inter', Sans-Serif;
   font-style: normal;
   font-weight: 400;
 }
