--- a/_sass/common/_headline.scss
+++ b/_sass/common/_headline.scss
@@ -5,7 +5,7 @@
   line-height: 24px;
 
   h1 {
-    color: $color-red;
+    color: $color-green;
     font-size: 47px;
     font-weight: 700;
     letter-spacing: -0.01em;
@@ -13,7 +13,7 @@
   }
 
   h2 {
-    color: $color-red;
+    color: $color-green;
     font-size: 39px;
     @media (max-width: 800px) {
       font-size: 32px;
@@ -27,7 +27,7 @@
   }
 
   h3 {
-    color: $color-red;
+    color: $color-green;
     font-size: 36px;
     font-weight: 700;
     letter-spacing: -0.01em;
@@ -70,7 +70,7 @@
     text-decoration-thickness: 2px;
 
     &:hover {
-      color: $color-red;
+      color: $color-green;
     }
 
   }
