--- a/_sass/modules/_features.scss
+++ b/_sass/modules/_features.scss
@@ -1,5 +1,4 @@
 .features {
-
   &__headline,
   &__body {
     margin-left: 30px;
@@ -8,32 +7,27 @@
   }
 
   &__headline {
-
     color: $color-black;
     margin-bottom: 17px;
     margin-top: -7px;
 
     h4 {
-      color: $color-red;
+      color: $color-green;
       font-weight: 700;
     }
 
     p {
       padding-bottom: 17px;
     }
-
   }
 
   &__body {
-
     &--padding-bottom {
       padding-bottom: 60px;
     }
-
   }
 
   &__subhead {
-
     border-bottom: 3px solid rgba($color-black, 0.1);
     margin-bottom: 30px;
     margin-top: -7px;
@@ -42,7 +36,6 @@
     h5 {
       padding-bottom: 0;
     }
-
   }
 
   &__blocks {
@@ -51,7 +44,6 @@
   }
 
   &__block {
-
     margin-bottom: -33px;
     margin-top: -7px;
 
@@ -61,33 +53,23 @@
       line-height: 25px;
       padding-bottom: 8px;
     }
-
   }
 
-
-
-  @media(min-width: 768px) {
-
+  @media (min-width: 768px) {
     &__blocks {
       grid-template-columns: repeat(2, 1fr);
       gap: 40px 30px;
     }
 
     &__block {
-
       &--code,
       &--full {
         grid-column: 1 / span 2;
       }
-
     }
-
   }
 
-
-
-  @media(min-width: 1024px) {
-
+  @media (min-width: 1024px) {
     &__headline,
     &__body {
       margin-left: 60px;
@@ -95,7 +77,6 @@
     }
 
     &__body {
-
       border-top: 3px solid rgba($color-black, 0.1);
       display: flex;
       gap: 30px;
@@ -103,7 +84,6 @@
       &--padding-bottom {
         padding-bottom: 80px;
       }
-
     }
 
     &__subhead {
@@ -119,9 +99,5 @@
       gap: 60px;
       margin-top: 60px;
     }
-
   }
-
-
-
 }
