--- a/_sass/world/2023/modules/_agenda.scss
+++ b/_sass/world/2023/modules/_agenda.scss
@@ -26,9 +26,9 @@
     }
 
     a:hover {
-        text-decoration: none;
-        transform: none;
-      }
+      text-decoration: none;
+      transform: none;
+    }
 
     @media only screen and (max-width: 300px) {
       padding: 0;
@@ -109,7 +109,8 @@
         font-variation-settings: var(--font-weight-800);
       }
 
-      h3, .session__time {
+      h3,
+      .session__time {
         font-size: var(--type-medium);
         line-height: 1.6;
       }
