--- a/_sass/world/2024/base/_colors.scss
+++ b/_sass/world/2024/base/_colors.scss
@@ -1,15 +1,19 @@
 :root {
-    --red: #cb0c1c;
-    --dark-red: #CF1618;
-    --blue: #8BADDA;
-    --dark-blue: #7B9FD2;
-    --purple-pale: #F3EDFF;
-    --purple: #4E2A73;
-    --purple-dark: #432463;
-    --purple-gradient: linear-gradient(141deg, var(--purple) 40%, rgba(58, 31, 85, 1) 100%);
-    --white: #ffffff;
-    --black: #000000;
+  --red: #cb0c1c;
+  --dark-red: #cf1618;
+  --blue: #8badda;
+  --dark-blue: #7b9fd2;
+  --purple-pale: #f3edff;
+  --purple: #4e2a73;
+  --purple-dark: #432463;
+  --purple-gradient: linear-gradient(
+    141deg,
+    var(--purple) 40%,
+    rgba(58, 31, 85, 1) 100%
+  );
+  --white: #ffffff;
+  --black: #000000;
 
-    --text-color: var(--white);
-    --border-style: 2px solid var(--white);
+  --text-color: var(--white);
+  --border-style: 2px solid var(--white);
 }
